auth and helper js files added

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Cleggatron/Project2#readme",
   "dependencies": {
+    "moment": "^2.29.1",
     "sequelize": "^6.6.5"
   }
 }
