--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A repo for project 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "seed": "node seeds"
   },
   "repository": {
     "type": "git",
