--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   },
   "homepage": "https://github.com/Cleggatron/Project2#readme",
   "dependencies": {
-    "moment": "^2.29.1",
-    "sequelize": "^6.6.5",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-session-sequelize": "^7.1.2",
@@ -28,7 +26,11 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
+    "moment": "^2.29.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^6.6.5",
+    "winston": "^3.3.3"
   }
 }
