--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
   },
   "homepage": "https://github.com/Cleggatron/Project2#readme",
   "dependencies": {
-    "moment": "^2.29.1",
-    "sequelize": "^6.6.5",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^6.6.5"
   }
 }
